crates/tui/snapshots/inline/usage/usage_reserve_chinese_inline_narrow.snap
---
source: crates/tui/src/app/usage_tests.rs
expression: "render(&app, 48, 28)"
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘






─ 额度 ─────────────────────────────────────────

> ChatGPT 套餐  ·  pro

  Codex 额度 ─────────────────────────────────
  5h 额度  ·  剩余 65%（已用 35%）
  重置时间  ·  2033-05-18 03:33 UTC
  7d 额度  ·  剩余 20%（已用 80%）
  重置时间  ·  2033-05-23 22:26 UTC

  gpt-reserve 额度 ───────────────────────────
  模型  ·  gpt-5.6-luna
  7d 额度  ·  剩余 100%（已用 0%）
  重置时间  ·  2033-05-23 22:26 UTC
  点数  ·  10.25

  Esc 关闭  ·  运行 /usage 刷新
