crates/tui/snapshots/inline/usage/usage_reserve_inline_narrow.snap
---
source: crates/tui/src/app/usage_tests.rs
expression: "render(&app, 48, 28)"
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘






─ Usage ────────────────────────────────────────

> ChatGPT plan  ·  pro

  Codex quota ────────────────────────────────
  5h window  ·  65% left (35% used)
  Resets  ·  2033-05-18 03:33 UTC
  7d window  ·  20% left (80% used)
  Resets  ·  2033-05-23 22:26 UTC

  gpt-reserve quota ──────────────────────────
  Model  ·  gpt-5.6-luna
  7d window  ·  100% left (0% used)
  Resets  ·  2033-05-23 22:26 UTC
  Credits  ·  10.25

  Esc to close  ·  Run /usage to refresh
